# BigData

./: .gitignore  README.md
.github/workflows/: hadoop-hive.yml  spark-batch.yml  spark-streaming.yml
Data-Quality-Pipeline-gx/quality_check/: schema_validation.py
Data-Quality-Pipeline-gx/src/: __init__.py  generate_dirty_data.py
Databricks_BootCamp/: .gitignore  README.md
Databricks_BootCamp/Infrastructure/: main.tf  s3.tf  variable.tf
File-Formats/: .gitignore  main.py  pyproject.toml  requirements.txt
File-Formats/Parquet/: 01_intro.py  parquet.md
Implementing-SCDs-in-Hive/: docker-compose.yml
Implementing-SCDs-in-Hive/data/: sample_production.csv  sample_staging.csv
MicroService_communication/: docker-compose.yml
MicroService_communication/customer/: Dockerfile  entrypoint.sh  generate_protos.sh  requirements.txt
MicroService_communication/product/: Dockerfile  requirements.txt
Mointoring/: .env.grafana  .env.postgres-exporter  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
hadoop-hive-processing/: README.md  docker-compose.yml  hadoop.env  main.py
mointoring/: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
mointoring/db/: schemes.py
mointoring/prometheus/: prometheus.yml
mointoring/src/: .env.app
mointoring/src/db/: config.py  model.py
mointoring/src/utils/: metrics.py
spark-optimization/: docker-compose.yml
spark-streaming/: docker-compose.yml  prometheus.yml
spark_batch_processing/: docker-compose.yml
task/: Main.java  README.md
(+63 files in other folders)
