[project]
name = "mointoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg==0.29.0",
    "fastapi==0.104.1",
    "pydantic[email]==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy[asyncio]==2.0.23",
    "uvicorn[standard]==0.24.0",
]
